@@ -4,6 +4,7 @@ ChmSee 1.3.0-rc1 2010--12-01
 * Starup splash screen removed
 * Add global font setting
 * Fix a bug which get homepage from #STRINGS
+* Change Prev&Next page hotkey from Alt to Control.
 
 ChmSee 1.2.0 2010-07-23
 -----------------------
@@ -19,7 +20,7 @@ ChmSee 1.1.0 2010-04-12
 -----------------------
 * Only support Gecko > 1.9 (Firefox3)
 * Need gtk+ >= 2.16 (for using gtkbuilder and g_uri functions)
-* Add index page filter string (Thanks Mingxi Wu <mxwu@novell.com>)
+* Add index page filter string (Thanks Mingxi Wu)
 * Add page find function
 * Add Recent Files feature
 * Add loading last file at starup option
@@ -151,7 +152,7 @@ ChmSee 1.0.1 2008-05-16
 
 ChmSee 1.0.0 2007-07-23
 ------------------------
-* Add cs2w, written by rae l <crquan@gmail.com>. It's a Python script
+* Add cs2w, written by rae l. It's a Python script
   that can convert CHM file to web browser friendly pages.
 
 ChmSee 1.0.0-beta2 2007-04-07
